# twitch-irc-benchmarks

./: .gitignore  .gitmodules  README.md  benchmark.sh  package-lock.json
cpp/: CMakeLists.txt  bench.cpp
dotnet/: ComparisonBenchmarks.cs  Program.cs  libs-comparison.csproj  libs-comparison.sln
dotnet/src/: ComparisonBenchmarks.cs  MiniTwitch.cs  Program.cs  libs-comparison.csproj
elixir/: .gitignore  README.md  mix.exs
elixir/lib/: twitch_bench.ex
elixir/test/: twitch_bench_test.exs
gleam/: gleam.toml  manifest.toml
gleam/src/: benchmark.gleam  orange_tmi.gleam
go/: go.mod  go.sum  main_test.go
jvm/: .gitignore  build.gradle.kts
jvm/src/jmh/java/io/github/jprochazk/irc/: Benchmarks.java
node/: bench.js  package-lock.json  package.json
results/round-0/: README.md
results/round-0/darwin-apple-m1pro/: dotnet.txt  go.txt  java.txt  node.txt  rust.txt
rust/: Cargo.toml
rust/benches/: parse.rs
