[package]
name = "irc-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
irc-rust = "0.4.0"
mimalloc = { version = "0.1.37", default-features = false }
twitch = { git = "https://github.com/jprochazk/twitch-rs.git", version = "0.1.0", features = [
  "simd",
] }
twitch-irc = "5.0.0"

[[bench]]
name = "parse"
harness = false

[profile.bench]
lto = "fat"
