[package]
name = "irc-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
irc-rust = "0.4.0"
mimalloc = { version = "0.1.37", default-features = false }
twitch-irc = "5.0.0"

[dependencies.twitch_simd]
package = "twitch"
git = "https://github.com/jprochazk/twitch-rs.git"
rev = "6c25b2f1bc5ad34b039bbb73c2bb2c0f599f88c4"
features = ["simd"]
default-features = false

[dependencies.twitch_no_simd]
package = "twitch"
git = "https://github.com/jprochazk/twitch-rs.git"
rev = "8182545bf149f2d607e030dd2ec64f105f63c624"
features = []
default-features = false

[[bench]]
name = "parse"
harness = false

[profile.bench]
lto = "fat"
